--- a/pagina/index.html
+++ b/pagina/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Quick order </title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Quick order 🥩 </title>
+</head>
+
+<body>
+  <center>
+    <h1>SirLuck</h1>
+  </center>
+<table>
+  <tr>
+    <td></td>
+  </tr>
+</table>
+</body>
+
 </html>
