--- a/pagina/index.html
+++ b/pagina/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Quick order 🥩 </title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <center>
-    <h1>SirLuck</h1>
+    <h1>SerLuk</h1>
   </center>
-<table>
-  <tr>
-    <td></td>
-  </tr>
-</table>
+  <hr noshade>
+  <center>
+    <table cellspacing="20">
+      <tr>
+        <td><a href="inicio.html"><b>Inicio</b></a></td>
+        <td><a href="acerca.html"><b>Acerca</b></a></td>
+        <td><a href="menu.html"><b>Menú</b></a></td>
+        <td><a href="contacto.html"><b>Contacto</b></a></td>
+      </tr>
+    </table>
+  </center>
+<hr noshade>
+<center>
+  <img class="logo" src="Imagenes/logo.png" alt="SerLuk logo">
+</center>
 </body>
 
 </html>
