--- a/pagina/index.html
+++ b/pagina/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Quick order 🥩 </title>
+  <title>Quick order</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="Imagenes/favicon.ico">
 </head>
 
 <body>
